# ai-book-reading

./: .gitignore  AGENTS.md  README.md  TASKS.md  docker-compose.yml  start.sh
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: config.py  db.py  main.py
backend/app/api/: books.py  chapters.py  chat.py  glossary.py  html.py  jobs.py  summaries.py
backend/app/ingestion/: pdf_extract.py  structure.py
backend/app/models/: book_structure.py  schemas.py
backend/app/pipeline/: chunking.py  job_runner.py  ollama_client.py  rag.py  summarize.py  translate.py
backend/app/rendering/: html_render.py
backend/app/rendering/templates/: book.html.jinja2
backend/tests/: conftest.py  test_chunking.py  test_html_render.py  test_job_runner.py  test_pdf_extract.py  test_rag.py  test_structure.py  test_translate.py
frontend/: Dockerfile  angular.json  nginx.conf  package-lock.json  package.json
frontend/src/: styles.css  styles.scss
frontend/src/app/: app.config.ts  app.css  app.html  app.routes.ts  app.scss  app.ts
frontend/src/app/core/: books-api.service.ts  books.store.ts  theme.service.ts
frontend/src/app/core/models/: book.model.ts
frontend/src/app/features/chat/: chat-markdown.ts  chat-page.html  chat-page.scss  chat-page.ts
frontend/src/app/features/glossary/: glossary-page.css  glossary-page.html  glossary-page.ts
frontend/src/app/features/job-progress/: job-progress-page.css  job-progress-page.html  job-progress-page.scss  job-progress-page.ts
frontend/src/app/features/reader/: reader-page.css  reader-page.html  reader-page.scss  (+1 more)
(+4 files in other folders)
